# firesafetymonitor

./: admin_auth.py  app.py  gps_navigator.py  migrate_db.py  models.py  notifier.py  pyproject.toml  replit.md  routes.py  sensor_reader.py  setup_sample_data.py  whatsapp_bot.py  whatsapp_demo.py
arduino_examples/: README.md  fire_sensor_node.ino
attached_assets/: Pasted--Python-Based-Fire-Response-and-Monitoring-System-Project-Overview-The-system-will-Detect-fire-1750670091075_1750670091076.txt
instance/: fire_monitoring.db
static/css/: custom.css
static/js/: main.js
templates/: admin_login.html  alerts.html  base.html  change_password.html  dashboard.html  index.html  report_fire.html  whatsapp_bot.html
