[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyserial>=3.5",
    "serial>=0.0.97",
    "sqlalchemy>=2.0.41",
    "twilio>=9.6.3",
    "werkzeug>=3.1.3",
]
